ft(reset-password):implement ft-reset-password-168675541
-implement ft-reset-password-168675541

[Finishes #168675541]
